{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 234,
  "lineage": "aa4c6aed-4047-96bf-9229-682420a349dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fef3a2b9195a5c",
            "arn": "arn:aws:ec2:us-east-1:384235570959:elastic-ip/eipalloc-0f5fef3a2b9195a5c",
            "domain": "vpc",
            "id": "eipalloc-0f5fef3a2b9195a5c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-194-205-248.compute-1.amazonaws.com",
            "public_ip": "44.194.205.248",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "eipalloc-0f5fef3a2b9195a5c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EP-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8194b781308c8f9",
            "arn": "arn:aws:ec2:us-east-1:384235570959:elastic-ip/eipalloc-0e8194b781308c8f9",
            "domain": "vpc",
            "id": "eipalloc-0e8194b781308c8f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-211-60-134.compute-1.amazonaws.com",
            "public_ip": "3.211.60.134",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "eipalloc-0e8194b781308c8f9",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:384235570959:instance/i-0fe0f8c86a74d0f51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe0f8c86a74d0f51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a934b70e49f12d2b"
              }
            ],
            "primary_network_interface_id": "eni-0a934b70e49f12d2b",
            "private_dns": "ip-10-0-3-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.91",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-011c75987601c0868",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fc6aa044ad35926",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef468a3d7d04a1d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "i-0fe0f8c86a74d0f51",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng",
            "aws_security_group.SG-private",
            "aws_security_group.SG-public",
            "aws_subnet.private-1",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-091138d0f0d41ff90",
            "arn": "arn:aws:ec2:us-east-1:384235570959:instance/i-0a344d26fc72456c4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a344d26fc72456c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eaf9e553689e09de"
              }
            ],
            "primary_network_interface_id": "eni-0eaf9e553689e09de",
            "private_dns": "ip-10-0-4-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c4edeb36edc67f7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018ba35e95892e17b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ef468a3d7d04a1d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "i-0a344d26fc72456c4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP-1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng-1",
            "aws_security_group.SG-private",
            "aws_security_group.SG-public",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:internet-gateway/igw-01126723f0a5ea187",
            "id": "igw-01126723f0a5ea187",
            "owner_id": "384235570959",
            "region": "us-east-1",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "igw-01126723f0a5ea187",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:loadbalancer/app/tf-lb-20260510100123292600000007/24944fee8187d96f",
            "arn_suffix": "app/tf-lb-20260510100123292600000007/24944fee8187d96f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20260510100123292600000007-1093112898.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:384235570959:loadbalancer/app/tf-lb-20260510100123292600000007/24944fee8187d96f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20260510100123292600000007",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0da283af11b21321a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-010363625b159a401"
              },
              {
                "subnet_id": "subnet-0b62e1448f25995ee"
              }
            ],
            "subnets": [
              "subnet-010363625b159a401",
              "subnet-0b62e1448f25995ee"
            ],
            "vpc_id": "vpc-0b07ff9762a3870c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:loadbalancer/app/tf-lb-20260510100123292600000007/24944fee8187d96f"
          },
          "dependencies": [
            "aws_security_group.SG-public",
            "aws_subnet.public",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alblis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:listener/app/tf-lb-20260510100123292600000007/24944fee8187d96f/ccb954f1cc8c5489",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:384235570959:listener/app/tf-lb-20260510100123292600000007/24944fee8187d96f/ccb954f1cc8c5489",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:loadbalancer/app/tf-lb-20260510100123292600000007/24944fee8187d96f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:listener/app/tf-lb-20260510100123292600000007/24944fee8187d96f/ccb954f1cc8c5489"
          },
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.albtg",
            "aws_security_group.SG-public",
            "aws_subnet.public",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "arn_suffix": "targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20260510100108729800000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535,i-0fe0f8c86a74d0f51,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "target_id": "i-0fe0f8c86a74d0f51"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "target_id": "i-0fe0f8c86a74d0f51"
          },
          "dependencies": [
            "aws_eip.EP",
            "aws_instance.inst",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.albtg",
            "aws_nat_gateway.ng",
            "aws_security_group.SG-private",
            "aws_security_group.SG-public",
            "aws_subnet.private-1",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lbtgat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535,i-0a344d26fc72456c4,80",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "target_id": "i-0a344d26fc72456c4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:384235570959:targetgroup/tf-20260510100108729800000001/2f93f4daa7bd5535",
            "target_id": "i-0a344d26fc72456c4"
          },
          "dependencies": [
            "aws_eip.EP-1",
            "aws_instance.inst-2",
            "aws_internet_gateway.igw",
            "aws_lb_target_group.albtg",
            "aws_nat_gateway.ng-1",
            "aws_security_group.SG-private",
            "aws_security_group.SG-public",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5fef3a2b9195a5c",
            "association_id": "eipassoc-0e7bcddfac05e4c3d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f0df5d64ea42d641",
            "network_interface_id": "eni-005aaaf8ee0d0f317",
            "private_ip": "10.0.1.108",
            "public_ip": "44.194.205.248",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-010363625b159a401",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "nat-0f0df5d64ea42d641",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ng-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8194b781308c8f9",
            "association_id": "eipassoc-04530a324087bf431",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0396f44f0d5d5a52a",
            "network_interface_id": "eni-03ded6aaa47181639",
            "private_ip": "10.0.2.98",
            "public_ip": "3.211.60.134",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b62e1448f25995ee",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "nat-0396f44f0d5d5a52a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP-1",
            "aws_internet_gateway.igw",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "art",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:route-table/rtb-0d92461486d5f294f",
            "id": "rtb-0d92461486d5f294f",
            "owner_id": "384235570959",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01126723f0a5ea187",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtb-0d92461486d5f294f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:route-table/rtb-0f24187eab9d4ebf1",
            "id": "rtb-0f24187eab9d4ebf1",
            "owner_id": "384235570959",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0df5d64ea42d641",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtb-0f24187eab9d4ebf1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:route-table/rtb-0ad9ede571e9160fa",
            "id": "rtb-0ad9ede571e9160fa",
            "owner_id": "384235570959",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0396f44f0d5d5a52a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtb-0ad9ede571e9160fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP-1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng-1",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f570ed218c1e6417",
            "region": "us-east-1",
            "route_table_id": "rtb-0f24187eab9d4ebf1",
            "subnet_id": "subnet-04fc6aa044ad35926"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtbassoc-0f570ed218c1e6417",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng",
            "aws_route_table.private-rt",
            "aws_subnet.private-1",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276139a824aa7152",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad9ede571e9160fa",
            "subnet_id": "subnet-018ba35e95892e17b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtbassoc-0276139a824aa7152",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.EP-1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ng-1",
            "aws_route_table.private-rt-1",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0a878ad3c80136",
            "region": "us-east-1",
            "route_table_id": "rtb-0d92461486d5f294f",
            "subnet_id": "subnet-010363625b159a401"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtbassoc-0fa0a878ad3c80136",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.art",
            "aws_subnet.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046871218b08f73f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0d92461486d5f294f",
            "subnet_id": "subnet-0b62e1448f25995ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "rtbassoc-046871218b08f73f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.art",
            "aws_subnet.public-1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:security-group/sg-0ef468a3d7d04a1d2",
            "description": "Allow private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef468a3d7d04a1d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da283af11b21321a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da283af11b21321a"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da283af11b21321a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260510100114547600000004",
            "name_prefix": "terraform-",
            "owner_id": "384235570959",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "sg-0ef468a3d7d04a1d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.SG-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:security-group/sg-0da283af11b21321a",
            "description": "Allow public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da283af11b21321a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260510100108729800000002",
            "name_prefix": "terraform-",
            "owner_id": "384235570959",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "sg-0da283af11b21321a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:subnet/subnet-04fc6aa044ad35926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fc6aa044ad35926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384235570959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "subnet-04fc6aa044ad35926",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:subnet/subnet-018ba35e95892e17b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018ba35e95892e17b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "384235570959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "subnet-018ba35e95892e17b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:subnet/subnet-010363625b159a401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010363625b159a401",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384235570959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "subnet-010363625b159a401",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:subnet/subnet-0b62e1448f25995ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b62e1448f25995ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "384235570959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b07ff9762a3870c2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "subnet-0b62e1448f25995ee",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:384235570959:vpc/vpc-0b07ff9762a3870c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08e1f3f1daa224ec4",
            "default_route_table_id": "rtb-062948922e5332c72",
            "default_security_group_id": "sg-0e31737741919fd59",
            "dhcp_options_id": "dopt-0aedecdfa0e2c3279",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b07ff9762a3870c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062948922e5332c72",
            "owner_id": "384235570959",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "384235570959",
            "id": "vpc-0b07ff9762a3870c2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}